Fix scrolling - change overflow from hidden to auto

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@
 
 html {
   background: #000;
-  overflow: hidden;
+  overflow: auto;
 }
 
 body {
@@ -21,13 +21,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background: #000;
   color: #fff;
-  overflow: hidden;
-  height: 100vh;
-  width: 100vw;
+  overflow: auto;
 }
 
 #root {
-  height: 100vh;
-  width: 100vw;
-  overflow: hidden;
+  overflow: auto;
 }
